Fixing INtro Box on mobile added meta fix for bootstrap

--- a/Dev/css/styles.css
+++ b/Dev/css/styles.css
@@ -13,7 +13,7 @@ color: white;
 z-index: 100}
 #introduction h2 {text-align: center;}
 #introduction img { margin: 0 0 30px 0;  }
-#introduction #introCopy {max-width: 800px; margin: 5% 10%; position: absolute; top: 15%; height: 100%}
+#introduction #introCopy {max-width: 800px; padding: 10% 10%; position: relative; top: 15%; min-height: 100%; }
 #introduction p {margin: 0}
 #introduction .btn_next {color: white; border: none; font-size: 54px; }
 
